# glasgow_calibration

./: .gitignore  LICENSE  README.md  UR3notes.md
calibration_glasgow/: CMakeLists.txt  package.xml  setup.py
calibration_glasgow/cvsba-lib/src/: cvsba.h
calibration_glasgow/include/calibration_glasgow/: calibration_services.h  camera_calibration.h  parameters.h
calibration_glasgow/launch/: baxter_handeye_calibration.launch  frame_definition.launch  other_node.launch
calibration_glasgow/src/: calibration_services.cpp  camera_calibration.cpp  handeye_calibration.cpp
twodto3d/: CMakeLists.txt  package.xml
twodto3d/src/: transform_pub.cpp  twodto3d.cpp
twodto3d/srv/: twodto3d.srv
